tests/invalid/undef_mode.err_exp
undef_mode.m:009: In mode declaration for predicate `x'/1:
undef_mode.m:009:   error: undefined mode `foo'/0.
